--- a/MyEngine/MyEngine.vcxproj.filters
+++ b/MyEngine/MyEngine.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="MyEngine">
       <UniqueIdentifier>{01CCBB96-ED98-16A2-16B2-044A02DE4B30}</UniqueIdentifier>
     </Filter>
+    <Filter Include="MyEngine\Events">
+      <UniqueIdentifier>{C5CCB583-3158-2348-3A69-A63CA6737F48}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\MyEngine.h" />
@@ -15,6 +18,18 @@
     </ClInclude>
     <ClInclude Include="src\MyEngine\EntryPoint.h">
       <Filter>MyEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MyEngine\Events\ApplicationEvent.h">
+      <Filter>MyEngine\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MyEngine\Events\Event.h">
+      <Filter>MyEngine\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MyEngine\Events\KeyEvent.h">
+      <Filter>MyEngine\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MyEngine\Events\MouseEvent.h">
+      <Filter>MyEngine\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\MyEngine\Log.h">
       <Filter>MyEngine</Filter>
