--- a/MyEngine/MyEngine.vcxproj.filters
+++ b/MyEngine/MyEngine.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClInclude Include="src\MyEngine\Log.h">
       <Filter>MyEngine</Filter>
     </ClInclude>
+    <ClInclude Include="src\mepch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\MyEngine\Application.cpp">
@@ -42,5 +43,6 @@
     <ClCompile Include="src\MyEngine\Log.cpp">
       <Filter>MyEngine</Filter>
     </ClCompile>
+    <ClCompile Include="src\mepch.cpp" />
   </ItemGroup>
 </Project>
