--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "MyEngine/vendor/spdlog"]
 	path = MyEngine/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "MyEngine/vendor/GLFW"]
+	path = MyEngine/vendor/GLFW
+	url = https://github.com/YourEverydayUser/glfw
